@@ -19,7 +19,7 @@ using Mono.Unix;
 
 namespace MonoTests.Mono.Unix {
 
-	[TestFixture]
+	[TestFixture, Category ("NotDotNet")]
 	public class UnixUserTest
 	{
 		[Test]
